samples/_failures_safe/1761125309_c64d7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c94a8fd.c:183: error: expected ‘;’, ‘,’ or ‘)’ at end of input
